--- a/01. PARTIE LEGISLATIVE/Article L1214-2 - 23086200.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-2 - 23086200.md
@@ -6,7 +6,7 @@ Le plan de déplacements urbains vise à assurer :
 l'environnement et de la santé, d'autre part ; 
 
 2° Le renforcement de la cohésion sociale et urbaine, notamment l'amélioration de l'accès aux réseaux de transports publics
-des personnes handicapées ou dont la mobilité est réduite ; 
+des personnes handicapées ou dont la mobilité est réduite, ainsi que des personnes âgées ; 
 
 3° L'amélioration de la sécurité de tous les déplacements, en opérant, pour chacune des catégories d'usagers, un partage de
 la voirie équilibré entre les différents modes de transport et en effectuant le suivi des accidents impliquant au moins un
@@ -51,7 +51,7 @@ véhicules électriques ou hybrides rechargeables.
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+	  - Loi n°2015-1776 du 28 décembre 2015 - art. 22
 
 	**Cité par**:
 
