--- a/01. PARTIE LEGISLATIVE/Article L1231-8 - 23085757.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-8 - 23085757.md
@@ -13,13 +13,14 @@ des usagers, en concertation avec l'Etat, les collectivités territoriales ou le
 ou privées de transports. 
 
 Elles mettent en place un service de conseil en mobilité à l'intention des employeurs et des gestionnaires d'activités
-générant des flux de déplacements importants.
+générant des flux de déplacements importants, ainsi qu'à l'intention de publics spécifiques, notamment les personnes
+handicapées et les personnes âgées.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+	  - Loi n°2015-1776 du 28 décembre 2015 - art. 22
 
 	**Cite**:
 
