--- a/02. PARTIE REGLEMENTAIRE/Article R5314-32 - 30031096.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-32 - 30031096.md
@@ -1,7 +1,8 @@
 # Article R5314-32
 
-Le président du conseil général ou le maire, selon le cas, informe l'autorité administrative compétente pour qu'elle procède
-à la constatation et poursuive la répression des empiètements, occupations irrégulières ou infractions de toutes natures aux
+Le président du conseil régional, le président du conseil départemental, le président de l'organe délibérant du groupement de
+collectivités territoriales ou le maire, selon le cas, informe l'autorité administrative compétente pour qu'elle procède à la
+constatation et poursuive la répression des empiètements, occupations irrégulières ou infractions de toutes natures aux
 dispositions de la présente section dont ils ont connaissance dans l'exercice de leurs fonctions.
 
 **Liens relatifs à cet article**
@@ -10,10 +11,6 @@ dispositions de la présente section dont ils ont connaissance dans l'exercice d
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*631-5 (Ab)
+	  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
