--- a/02. PARTIE REGLEMENTAIRE/Article R5333-4 - 30031460.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5333-4 - 30031460.md
@@ -50,25 +50,25 @@ Un message rectificatif doit être envoyé en cas de modification de l'une des i
 son bord le certificat d'assurance prévu à l'article L. 5123-1 et à l'article 88 du décret n° 67-967 du 27 octobre 1967
 relatif au statut des navires et autres bâtiments de mer. 
 
-En outre, les capitaines des navires susceptibles d'être soumis à une inspection renforcée transmettent à la capitainerie du
-port de destination, par écrit ou par voie électronique, selon le modèle en usage dans le port, soixante-douze heures à
+8° En outre, les capitaines des navires susceptibles d'être soumis à une inspection renforcée transmettent à la capitainerie
+du port de destination, par écrit ou par voie électronique, selon le modèle en usage dans le port, soixante-douze heures à
 l'avance, ou au plus tard au départ du port précédent lorsque celui-ci est situé à moins de soixante-douze heures de route
 ou, à défaut, dès que le port de destination est connu, les informations suivantes : 
 
-1° L'identification comportant le nom, l'indicatif radio, le numéro OMI et MMSI du navire ; 
+a L'identification comportant le nom, l'indicatif radio, le numéro OMI et MMSI du navire ; 
 
-2° La date et l'heure probable de l'arrivée ; 
+b La date et l'heure probable de l'arrivée ; 
 
-3° La date et l'heure probable de l'appareillage ; 
+c La date et l'heure probable de l'appareillage ; 
 
-4° Les opérations envisagées telles que le chargement, le déchargement ou autres ; 
+d Les opérations envisagées telles que le chargement, le déchargement ou autres ; 
 
-5° Les inspections et visites réglementaires envisagées et les travaux de maintenance et de réparation importants qui seront
+e Les inspections et visites réglementaires envisagées et les travaux de maintenance et de réparation importants qui seront
 effectués dans le port de destination ; 
 
-6° La date de la dernière inspection renforcée effectuée dans la région couverte par le mémorandum d'entente de Paris ; 
+f La date de la dernière inspection renforcée effectuée dans la région couverte par le mémorandum d'entente de Paris ; 
 
-7° Pour un navire-citerne : sa configuration en précisant s'il dispose d'une simple coque, simple coque avec ballastes
+g Pour un navire-citerne : sa configuration en précisant s'il dispose d'une simple coque, simple coque avec ballastes
 séparées (SBT), ou double coque, l'état des citernes à cargaison et à ballast en précisant si elles sont pleines, vides ou
 inertées, le volume et la nature de la cargaison.
 
@@ -76,9 +76,13 @@ inertées, le volume et la nature de la cargaison.
 
 	**Cite**:
 
-	  - Décret n°67-967 du 27 octobre 1967 - art. 88 (T)
-	  - Code des transports - art. L5123-1 (V)
-	  - Code des transports - art. R5334-6 (V)
+	  - Décret n°67-967 du 27 octobre 1967 - art. 88
+	  - Code des transports - art. L5123-1
+	  - Code des transports - art. R5334-6
+
+	**Codifié par**:
+
+	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
 	**Cité par**:
 
@@ -97,14 +101,6 @@ inertées, le volume et la nature de la cargaison.
 	  - Code des transports - art. R5743-4 (V)
 	  - Code des transports - art. R5753-10 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Décret n°2009-877 du 17 juillet 2009 - art. 4 sauf 7° ecqc les ports des DOM, de Mayotte et de Saint-Pierre-et-Miquelon (Ab)
-
-	**Codifié par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
