--- a/02. PARTIE REGLEMENTAIRE/Article R5341-2 - 30031598.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5341-2 - 30031598.md
@@ -14,28 +14,23 @@ dans la zone de pilotage obligatoire d'un port non militaire ;
 conditions locales d'exécution de l'opération de pilotage. La décision portant fixation du seuil est prise par le préfet de
 région après avis de la commission locale prévue à l'article R. 5341-6. Elle est annexée au règlement local de la station ; 
 
-5° Les navires dont le capitaine est titulaire de la licence de capitaine pilote applicable dans le port ou la partie du port
-considéré et délivrée selon les modalités fixées par l'article R. 5341-3.
+5° Abrogé.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°69-515 du 19 mai 1969 - art. 3, alinéas 2 à 10 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
+	  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R5341-1 (V)
-	  - Code des transports - art. R5341-3 (V)
-	  - Code des transports - art. R5341-6 (V)
+	  - Code des transports - art. R5341-1
+	  - Code des transports - art. R5341-3
+	  - Code des transports - art. R5341-6
 
 	**Cité par**:
 
