--- a/02. PARTIE REGLEMENTAIRE/Article R5314-28 - 30031088.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-28 - 30031088.md
@@ -1,28 +1,27 @@
 # Article R5314-28
 
 Les dispositions de la présente section sont applicables aux dépendances du domaine public naturel ou artificiel, maritime ou
-fluvial, mises à la disposition des départements ou des communes en application de l'article 9 de la loi n° 83-663 du 22
-juillet 1983 complétant la loi n° 83-8 du 7 janvier 1983 relative à la répartition de compétences entre les communes, les
-départements, les régions et l'État ou qui leur ont été transférées en gestion.
+fluvial, mises à la disposition des régions, des départements, des communes ou des groupements de collectivités territoriales
+en application de l'article 9 de la loi n° 83-663 du 22 juillet 1983 complétant la loi n° 83-8 du 7 janvier 1983 relative à
+la répartition de compétences entre les communes, les départements, les régions et l'État et de l'article 22 de la loi du 7
+août 2015 portant nouvelle organisation territoriale de la République. Les dispositions de la présente section sont également
+applicables aux dépendances du domaine public naturel ou artificiel, maritime ou fluvial, qui leur ont été transférées en
+gestion.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Loi n°83-8 du 7 janvier 1983 (V)
-	  - Loi n°83-663 du 22 juillet 1983 - art. 9 (M)
+	  - Loi n°83-8 du 7 janvier 1983
+	  - Loi n°83-663 du 22 juillet 1983 - art. 9
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*631-1 (Ab)
+	  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
 
 	**Cité par**:
 
