--- a/02. PARTIE REGLEMENTAIRE/Article R5314-33 - 30031098.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-33 - 30031098.md
@@ -1,11 +1,15 @@
 # Article R5314-33
 
-Dans les ports départementaux et communaux, l'autorisation d'occupation des dépendances du domaine public qui est nécessaire
-pour l'exploitation de cultures marines est consentie, selon le cas, par le président du conseil général ou le maire qui en
-détermine les conditions financières en application des règles définies par le conseil général ou le conseil municipal.
+Dans les ports régionaux, départementaux, communaux et ceux relevant de groupements de collectivités territoriales,
+l'autorisation d'occupation des dépendances du domaine public qui est nécessaire pour l'exploitation de cultures marines est
+consentie, selon le cas, par le président du conseil régional, le président du conseil départemental, le maire ou le
+président de l'organe délibérant du groupement de collectivités territoriales qui en détermine les conditions financières en
+application des règles définies par le conseil régional, le conseil départemental, le conseil municipal ou l'organe
+délibérant du groupement de collectivités territoriales.
 
 Cette autorisation ne peut être délivrée qu'aux bénéficiaires d'une autorisation d'exploitation accordée dans les conditions
-prévues par le décret n° 83-228 du 22 mars 1983 fixant le régime de l'autorisation des exploitations de cultures marines.
+prévues par la section 2 du chapitre III du titre II du livre IX de la partie réglementaire du code rural et de la pêche
+maritime fixant le régime de l'autorisation des exploitations de cultures marines.
 
 La redevance domaniale est perçue par la collectivité compétente.
 
@@ -13,19 +17,15 @@ La redevance domaniale est perçue par la collectivité compétente.
 
 	**Cite**:
 
-	  - Décret n°83-228 du 22 mars 1983 (Ab)
+	  - Décret n°83-228 du 22 mars 1983
 
 	**Codifié par**:
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*631-6 (Ab)
+	  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
 
 	**Cité par**:
 
