--- a/02. PARTIE REGLEMENTAIRE/Article R5314-5 - 30031026.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5314-5 - 30031026.md
@@ -4,7 +4,10 @@ La demande de concession d'outillage public ou d'avenant est instruite par le di
 l'article R. 5314-2. 
 
 Le montant de la redevance pour occupation du domaine public de l'Etat fixé par le directeur départemental ou, le cas
-échéant, régional des finances publiques est mentionné dans le dossier d'instruction. 
+échéant, régional des finances publiques ou, en application des articles R. 2125-15 et R. 2125-16 du code général de la
+propriété des personnes publiques, par le président du conseil régional, le président du conseil départemental, le conseil
+municipal ou le président de l'organe délibérant du groupement de collectivités territoriales est mentionné dans le dossier
+d'instruction. 
 
 Lorsque la convention comporte la réalisation de travaux, il n'est procédé qu'à une seule instruction.
 
@@ -14,14 +17,9 @@ Lorsque la convention comporte la réalisation de travaux, il n'est procédé qu
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R*122-9, ecqc les ports décentralisés (V)
-	  - Code des ports maritimes - art. R*611-2, alinéa 2 (Ab)
+	  - Décret n°2015-1789 du 28 décembre 2015 - art. 1
 
 	**Cite**:
 
