--- a/01. PARTIE LEGISLATIVE/Article L1214-19 - 23086085.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-19 - 23086085.md
@@ -1,6 +1,6 @@
 # Article L1214-19
 
-La compétence de l'établissement public de coopération intercommunale mentionné à l'article L. 122-4 du code de l'urbanisme
+La compétence de l'établissement public de coopération intercommunale mentionné à l'article L. 143-16 du code de l'urbanisme
 peut, s'il y a lieu et dans les conditions prévues par le code général des collectivités territoriales, être élargie à
 l'élaboration d'un plan de déplacements urbains couvrant l'ensemble du périmètre relevant de la compétence de cet
 établissement public, sous réserve que ce périmètre inclue la totalité du ou des ressorts territoriaux des autorités
@@ -10,11 +10,11 @@ organisatrices de la mobilité situés sur son territoire.
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L122-4
+	  - Code de l'urbanisme - art. L143-16 (VD)
 
 	**Cité par**:
 
