--- a/01. PARTIE LEGISLATIVE/Article L1521-3 - 23085224.md
+++ b/01. PARTIE LEGISLATIVE/Article L1521-3 - 23085224.md
@@ -1,14 +1,18 @@
 # Article L1521-3
 
 Les dispositions relatives à la lutte contre les nuisances sonores aéroportuaires sont fixées par les articles L. 6361-1 à L.
-6361-13 et, en ce qui concerne l'utilisation des sols exposés au bruit des aéronefs, par le chapitre VII du titre IV du livre
-Ier du code de l'urbanisme.
+6361-13 et, en ce qui concerne l'utilisation des sols exposés au bruit des aéronefs, par la section 2 du chapitre II du titre
+Ier du livre Ier du code de l'urbanisme.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
+
 	**Cite**:
 
-	  - Code des transports - art. L6361-1 (VD)
+	  - Code des transports - art. L6361-1
 
 	**Codifié par**:
 
