--- a/01. PARTIE LEGISLATIVE/Article L2101-6 - 29332252.md
+++ b/01. PARTIE LEGISLATIVE/Article L2101-6 - 29332252.md
@@ -12,8 +12,8 @@ ferroviaire.
 Les accords collectifs négociés au niveau de la SNCF pour l'ensemble des établissements publics du groupe public ferroviaire
 sont soumis au régime des accords d'entreprise. 
 
-Par dérogation au deuxième alinéa du présent article, les négociations prévues à l'article L. 2242-12 du code du travail se
-déroulent, respectivement, au niveau de la SNCF, de SNCF Réseau et de SNCF Mobilités. Pour ces négociations, les
+Par dérogation au deuxième alinéa du présent article, les négociations prévues au 3° de l'article L. 2242-5 du code du
+travail se déroulent, respectivement, au niveau de la SNCF, de SNCF Réseau et de SNCF Mobilités. Pour ces négociations, les
 organisations syndicales représentatives au niveau de chaque établissement public mandatent spécifiquement un représentant
 choisi parmi leurs délégués syndicaux d'établissement. La représentativité des organisations syndicales au niveau de
 l'établissement public est appréciée conformément aux règles définies aux articles L. 2122-1 à L. 2122-3 du même code, en
@@ -24,15 +24,15 @@ de l'établissement public concerné.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 1
+	  - Loi n°2015-994 du 17 août 2015 - art. 19 (V)
 
 	**Cite**:
 
-	  - Code du travail - art. L2122-1 (V)
+	  - Code du travail - art. L2122-1
 	  - Code du travail - art. L2143-5
-	  - Code du travail - art. L2232-12 (V)
-	  - Code du travail - art. L2242-12
-	  - Code du travail - art. L3312-5 (V)
-	  - Code du travail - art. L3322-6 (V)
+	  - Code du travail - art. L2232-12
+	  - Code du travail - art. L2242-5 (VT)
+	  - Code du travail - art. L3312-5
+	  - Code du travail - art. L3322-6
