--- a/01. PARTIE LEGISLATIVE/Article L6223-3 - 23078258.md
+++ b/01. PARTIE LEGISLATIVE/Article L6223-3 - 23078258.md
@@ -1,8 +1,7 @@
 # Article L6223-3
 
-Par dérogation aux dispositions du titre Ier de la loi n° 78-753 du 17 juillet 1978 portant diverses mesures d'amélioration
-des relations entre l'administration et le public et diverses dispositions d'ordre administratif, social et fiscal, ne sont
-pas communicables : 
+Par dérogation aux dispositions du livre III du code des relations entre le public et l'administration, ne sont pas
+communicables : 
 
 1° Les comptes rendus d'événements au sens de l'article L. 6223-1 et les documents s'y rapportant ; 
 
@@ -16,16 +15,12 @@ nécessaire à l'amélioration de la sécurité.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-1341 du 23 octobre 2015 - art. 3 (V)
+
 	**Cite**:
 
-	  - Loi n°78-753 du 17 juillet 1978 (V)
 	  - Code des transports - art. L6221-2 (V)
 	  - Code des transports - art. L6223-1 (V)
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L731-4 (Ab), alinéas 1, 2, 4 et 5, les événements d'aviation civile et les informations de sécurité portant sur les avions des pays tiers
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des relations entre le public et l'adminis... - art. L300-1 (V)
