--- a/02. PARTIE REGLEMENTAIRE/Article R1241-31 - 28996519.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-31 - 28996519.md
@@ -4,11 +4,11 @@ Parmi les projets d'infrastructures nouvelles, d'extension et d'aménagement de 
 d'Ile-de-France détermine les projets qu'il soumet à son approbation et qui font l'objet d'un schéma de principe et d'un
 avant-projet tels que définis ci-dessous. 
 
-Lorsque ces projets donnent lieu à la concertation préalable prévue par l'article L. 300-2 du code de l'urbanisme, à la
-saisine de la Commission nationale du débat public prévue par l'article L. 121-2 du code de l'environnement ou à l'ouverture
-de l'enquête publique préalable à la réalisation de projets d'aménagements, d'ouvrages ou de travaux, les dossiers relatifs à
-ces procédures sont soumis à l'approbation du syndicat avant le lancement de la concertation ou de l'enquête ou la saisine de
-la Commission nationale du débat public. 
+Lorsque ces projets donnent lieu à la concertation préalable prévue par le chapitre III du titre préliminaire du livre Ier du
+code de l'urbanisme, à la saisine de la Commission nationale du débat public prévue par l'article L. 121-2 du code de
+l'environnement ou à l'ouverture de l'enquête publique préalable à la réalisation de projets d'aménagements, d'ouvrages ou de
+travaux, les dossiers relatifs à ces procédures sont soumis à l'approbation du syndicat avant le lancement de la concertation
+ou de l'enquête ou la saisine de la Commission nationale du débat public. 
 
 Le schéma de principe expose les objectifs généraux de l'opération et décrit de façon sommaire le projet proposé, avec les
 variantes envisagées. Il présente le service attendu et ses principes d'exploitation avec une estimation des coûts
@@ -24,17 +24,13 @@ Le syndicat élabore lui-même ou fait élaborer les schémas de principe. L'ava
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 15, alinéas 1 à 6, paragraphe I (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1783 du 28 décembre 2015 - art. 9
 
 	**Cité par**:
 
@@ -42,5 +38,5 @@ Le syndicat élabore lui-même ou fait élaborer les schémas de principe. L'ava
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L300-2 (V)
-	  - Code de l'environnement - art. L121-2 (V)
+	  - Code de l'urbanisme - art. L300-2
+	  - Code de l'environnement - art. L121-2
