--- a/02. PARTIE REGLEMENTAIRE/Article R1241-32 - 28996521.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-32 - 28996521.md
@@ -4,25 +4,21 @@ Le Syndicat des transports d'Ile-de-France peut assurer la maîtrise d'ouvrage o
 projets d'infrastructures nouvelles destinées au transport public de personnes, d'extension et d'aménagement de lignes
 existantes, sans préjudice des compétences reconnues à l'établissement public Réseau ferré de France. 
 
-Le syndicat peut être bénéficiaire des emplacements réservés figurant dans un plan local d'urbanisme et mentionnés au V de
-l'article L. 123-1-5 du code de l'urbanisme. 
+Le syndicat peut être bénéficiaire des emplacements réservés figurant dans un plan local d'urbanisme et mentionnés à
+l'article L. 151-41 du code de l'urbanisme. 
 
 Pour l'exercice de ses missions, le syndicat peut bénéficier de la procédure d'expropriation pour cause d'utilité publique.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2005-664 du 10 juin 2005 - art. 15, alinéas 7 à 9, paragraphe II (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1783 du 28 décembre 2015 - art. 9
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L123-1-5 (V)
+	  - Code de l'urbanisme - art. L151-41
