--- a/02. PARTIE REGLEMENTAIRE/Article R1241-9 - 28996473.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1241-9 - 28996473.md
@@ -32,8 +32,9 @@ existantes ;
 
 11° La désignation, s'il y a lieu, des maîtres d'ouvrage des projets d'investissement ; 
 
-12° L'approbation des dossiers destinés à la concertation préalable prévue par l'article L. 300-2 du code de l'urbanisme, à
-la Commission nationale du débat public et à l'enquête publique des aménagements, ouvrages ou travaux ; 
+12° L'approbation des dossiers destinés à la concertation préalable prévue par le chapitre III du titre préliminaire du livre
+Ier du code de l'urbanisme, à la Commission nationale du débat public et à l'enquête publique des aménagements, ouvrages ou
+travaux ; 
 
 13° L'approbation des contrats, emprunts, marchés, conventions et mandats d'un montant supérieur à un seuil qu'il fixe ; 
 
@@ -66,12 +67,11 @@ prendre de décisions qu'à l'unanimité de leurs membres présents.
 
 	**Modifié par**:
 
-	  - Décret n°2015-748 du 27 juin 2015 - art. 2
+	  - Décret n°2015-1783 du 28 décembre 2015 - art. 9
 
 	**Cite**:
 
 	  - Code général des collectivités territoriales - art. L2531-2
-	  - Code de l'urbanisme - art. L300-2
 	  - Code des transports - art. L1241-3
 	  - Code des transports - art. R1241-22
 	  - Code des transports - art. R1241-8
