--- a/02. PARTIE REGLEMENTAIRE/Article R1422-1 - 28996753.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-1 - 28996753.md
@@ -10,15 +10,7 @@ chacune des régions dans lesquelles ses établissements sont installés.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 2, alinéas 1 et 2 (Ab)
-
 	**Codifié par**:
-
-	  - Décret n°2014-530 du 22 mai 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
@@ -26,3 +18,7 @@ chacune des régions dans lesquelles ses établissements sont installés.
 
 	  - Décret n°2014-1271 du 23 octobre 2014 - art. (VD)
 	  - Code des transports - art. R1432-2 (V)
+
+	**Modifié par**:
+
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
