--- a/02. PARTIE REGLEMENTAIRE/Article R1422-11 - 28996773.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-11 - 28996773.md
@@ -1,27 +1,25 @@
 # Article R1422-11
 
-Tout ressortissant d'un autre Etat membre de l'Union européenne ou d'un Etat partie à l'accord sur l'Espace économique
-européen doit, pour être inscrit au registre, apporter la preuve de sa capacité professionnelle dans les conditions prévues
-aux articles R. 1422-12 à R. 1422-20.
+En application du 3° de l'article R. 1422-4, toute personne qui souhaite exercer en France la profession de commissionnaire
+de transport, qu'elle réside en France, dans un autre Etat membre de l'Union européenne ou dans un Etat partie à l'accord sur
+l'Espace économique européen, peut demander au préfet de région territorialement compétent la reconnaissance des
+qualifications professionnelles qu'elle a acquises en France ou dans ces Etats, dans les conditions prévues aux articles R.
+1422-12 à R. 1422-14-1.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 10 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
 	  - Arrêté du 21 décembre 2015 - art. 7 (V)
 	  - Code des transports - art. R1422-12 (VD)
-	  - Code des transports - art. R1422-15 (V)
+	  - Code des transports - art. R1422-15 (VD)
 	  - Code des transports - art. R1422-22 (VD)
 	  - Code des transports - art. R1422-4 (VD)
