--- a/02. PARTIE REGLEMENTAIRE/Article R1422-12 - 28996775.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-12 - 28996775.md
@@ -6,26 +6,22 @@ selon les modalités prévues aux articles R. 1422-13 et R. 1422-14.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéa 1, paragraphe I (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1411-1 (V)
-	  - Code des transports - art. R1422-13 (V)
+	  - Code des transports - art. R1411-1
+	  - Code des transports - art. R1422-13
 
 	**Cité par**:
 
 	  - Code des transports - art. R1422-11 (VD)
-	  - Code des transports - art. R1422-20 (V)
+	  - Code des transports - art. R1422-20 (VD)
 	  - Code des transports - art. R1422-21 (VD)
 	  - Code des transports - art. R1422-23 (VD)
