--- a/02. PARTIE REGLEMENTAIRE/Article R1422-13 - 28996777.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-13 - 28996777.md
@@ -5,12 +5,10 @@ Les modalités d'exercice des activités à titre indépendant ou en qualité de
 1° Soit pendant cinq années consécutives ;
 
 2° Soit pendant deux années consécutives, lorsque l'intéressé prouve qu'il a reçu, pour cette activité, une formation
-préalable d'au moins trois ans sanctionnée par un certificat reconnu par l'Etat membre ou partie ou jugée pleinement valable
-par un organisme professionnel compétent ;
+préalable d'au moins trois ans ;
 
 3° Soit pendant trois années consécutives, lorsque l'intéressé prouve qu'il a reçu, pour cette activité, une formation
-préalable d'au moins deux ans sanctionnée par un certificat reconnu par l'Etat membre ou partie ou jugée pleinement valable
-par un organisme professionnel compétent ;
+préalable d'au moins deux ans ;
 
 4° Soit pendant trois années consécutives, lorsque l'intéressé prouve qu'il a exercé cette activité à titre salarié pendant
 deux ans au moins ;
@@ -20,19 +18,16 @@ complet de l'intéressé auprès des services de l'Etat compétents en matière 
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéas 2 à 5 et 8, paragraphe I (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
 	  - Code des transports - art. R1422-12 (VD)
+	  - Code des transports - art. R1422-14-1 (VD)
 	  - Code des transports - art. R1422-21 (VD)
