--- a/02. PARTIE REGLEMENTAIRE/Article R1422-15 - 28996781.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-15 - 28996781.md
@@ -1,22 +1,20 @@
 # Article R1422-15
 
-La capacité professionnelle prévue à l'article R. 1422-11 peut également être prouvée par la possession par l'intéressé d'une
-attestation de compétences ou d'un titre de formation relatif aux activités mentionnées à l'article R. 1411-1 selon les
-modalités prévues par les articles R. 1422-16 à R. 1422-18.
+Les qualifications professionnelles prévues à l'article R. 1422-11 peuvent aussi avoir été acquises dans un autre Etat membre
+de l'Union européenne ou dans un Etat partie à l'accord sur l'Espace économique européen et reconnues en France par le préfet
+de région territorialement compétent, selon les modalités prévues par les articles R. 1422-16 à R. 1422-18, lorsque
+l'intéressé possède une attestation de compétences ou un titre de formation relatif aux activités mentionnées à l'article R.
+1411-1 délivré par un de ces Etats.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéa 9, paragraphe II (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
@@ -25,6 +23,6 @@ modalités prévues par les articles R. 1422-16 à R. 1422-18.
 
 	**Cite**:
 
-	  - Code des transports - art. R1411-1 (V)
-	  - Code des transports - art. R1422-11 (V)
-	  - Code des transports - art. R1422-16 (V)
+	  - Code des transports - art. R1411-1
+	  - Code des transports - art. R1422-11 (VD)
+	  - Code des transports - art. R1422-16
