--- a/02. PARTIE REGLEMENTAIRE/Article R1422-17 - 28996785.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-17 - 28996785.md
@@ -3,24 +3,21 @@
 Les attestations de compétence ou les titres de formation mentionnés à l'article R. 1422-16 doivent : 
 
 1° Avoir été délivrés ou reconnus par une autorité compétente désignée conformément aux dispositions en vigueur dans l'un des
-Etats membres de l'Union européenne ou d'un autre Etat partie à l'accord sur l'Espace économique européen ; 
+Etats membres de l'Union européenne ou d'un autre Etat partie à l'accord sur l'Espace économique européen et attester la
+préparation du titulaire à l'exercice de la profession concernée  ; 
 
-2° Certifier un niveau de qualification professionnelle au moins équivalent au niveau immédiatement inférieur aux diplômes et
-titres mentionnés à l'article R. 1422-4.
+2° Certifier un niveau de qualification professionnelle au moins équivalent au niveau des diplômes et titres mentionnés à
+l'article R. 1422-4.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéas 15 à 18, paragraphe II (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
@@ -28,5 +25,5 @@ titres mentionnés à l'article R. 1422-4.
 
 	**Cite**:
 
-	  - Code des transports - art. R1422-16 (V)
-	  - Code des transports - art. R1422-4 (V)
+	  - Code des transports - art. R1422-16
+	  - Code des transports - art. R1422-4
