--- a/02. PARTIE REGLEMENTAIRE/Article R1422-2 - 28996755.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-2 - 28996755.md
@@ -7,18 +7,14 @@ La composition du dossier de demande d'inscription est définie par arrêté du 
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 2, alinéas 3 et 4 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1422-3 (V)
+	  - Code des transports - art. R1422-3
