--- a/02. PARTIE REGLEMENTAIRE/Article R1422-23 - 28996797.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-23 - 28996797.md
@@ -7,19 +7,15 @@ doivent concerner une des personnes physiques qui dirigent effectivement les act
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 16 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1422-12 (V)
-	  - Code des transports - art. R1422-22 (V)
+	  - Code des transports - art. R1422-12
+	  - Code des transports - art. R1422-22 (VD)
