--- a/02. PARTIE REGLEMENTAIRE/Article R1422-24 - 28996799.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-24 - 28996799.md
@@ -10,17 +10,13 @@ l'inscription doit être porté à la connaissance du préfet de région dans un
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 19 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
