--- a/02. PARTIE REGLEMENTAIRE/Article R1422-7 - 28996765.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-7 - 28996765.md
@@ -31,43 +31,39 @@ judiciaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 6, alinéas 11 à 21 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code du travail - art. L5221-8 (V)
-	  - Code du travail - art. L8114-1 (V)
-	  - Code du travail - art. L8221-1 (V)
-	  - Code du travail - art. L8231-1 (V)
-	  - Code du travail - art. L8241-1 (V)
-	  - Code du travail - art. L8251-1 (V)
-	  - Code de la route. - art. L221-2 (V)
-	  - Code de la route. - art. L223-5 (V)
-	  - Code de la route. - art. L224-16 (V)
-	  - Code de la route. - art. L231-1 (V)
-	  - Code de la route. - art. L233-1 (V)
-	  - Code de la route. - art. L234-1 (V)
-	  - Code de la route. - art. L234-8 (V)
-	  - Code de la route. - art. L317-1 (V)
-	  - Code de la route. - art. L325-3-1 (V)
-	  - Code de la route. - art. L412-1 (V)
-	  - Code des transports - art. L1252-1 (V)
-	  - Code des transports - art. L1252-5 (V)
-	  - Code des transports - art. L1452-2 (V)
-	  - Code des transports - art. L3242-2 (V)
-	  - Code des transports - art. L3242-4 (V)
-	  - Code des transports - art. L3315-4 (V)
-	  - Code des transports - art. R1422-6 (V)
+	  - Code du travail - art. L5221-8
+	  - Code du travail - art. L8114-1
+	  - Code du travail - art. L8221-1
+	  - Code du travail - art. L8231-1
+	  - Code du travail - art. L8241-1
+	  - Code du travail - art. L8251-1
+	  - Code de la route. - art. L221-2
+	  - Code de la route. - art. L223-5
+	  - Code de la route. - art. L224-16
+	  - Code de la route. - art. L231-1
+	  - Code de la route. - art. L233-1
+	  - Code de la route. - art. L234-1
+	  - Code de la route. - art. L234-8
+	  - Code de la route. - art. L317-1
+	  - Code de la route. - art. L325-3-1
+	  - Code de la route. - art. L412-1
+	  - Code des transports - art. L1252-1
+	  - Code des transports - art. L1252-5
+	  - Code des transports - art. L1452-2
+	  - Code des transports - art. L3242-2
+	  - Code des transports - art. L3242-4
+	  - Code des transports - art. L3315-4
+	  - Code des transports - art. R1422-6 (VD)
 
 	**Cité par**:
 
