--- a/02. PARTIE REGLEMENTAIRE/Article R3121-13 - 30048451.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R3121-13 - 30048451.md
@@ -2,8 +2,7 @@
 
 I.-Les listes d'attente en vue de la délivrance des autorisations sont établies par l'autorité compétente pour les délivrer.
 Ces listes mentionnent la date de dépôt et le numéro d'enregistrement de chaque demande. Elles sont communicables dans les
-conditions prévues par l'article 4 de la loi n° 78-753 du 17 juillet 1978 portant diverses mesures d'amélioration des
-relations entre l'administration et le public et diverses dispositions d'ordre administratif, social et fiscal. 
+conditions prévues par l'article L. 311-9 du code des relations entre le public et l'administration. 
 
 Les demandes de délivrance sont valables un an. 
 
@@ -34,21 +33,17 @@ son siège.
 
 **Liens relatifs à cet article**
 
-	**Cite**:
-
-	  - Loi n°78-753 du 17 juillet 1978 - art. 4 (M)
-	  - Code des transports - art. L3121-10 (V)
-	  - Code des transports - art. L3121-5 (V)
-
-	**Codifié par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-1725 du 30 décembre 2014 - art.
-
 	**Cité par**:
 
 	  - Décret n°2014-1725 du 30 décembre 2014 - art. 9 (V)
 	  - Code des transports - art. R3121-5 (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-1341 du 23 octobre 2015 - art. 3 (V)
+
+	**Cite**:
+
+	  - Code des transports - art. L3121-10 (V)
+	  - Code des transports - art. L3121-5 (V)
+	  - Code des relations entre le public et l'adminis... - art. L311-9 (V)
