--- a/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
@@ -5,15 +5,15 @@ est élaboré par la région, en collaboration avec les départements et les aut
 le territoire régional. 
 
 Le projet de schéma fait ensuite l'objet d'une concertation avec l'Etat et, le cas échéant, avec les syndicats mixtes de
-transport mentionnés à l'article L. 1231-10 du présent code. Les établissements publics mentionnés à l'article L. 122-4 du
+transport mentionnés à l'article L. 1231-10 du présent code. Les établissements publics mentionnés à l'article L. 143-16 du
 code de l'urbanisme et les gestionnaires de voirie sont consultés à leur demande sur le projet de schéma. 
 
 Le projet de schéma régional de l'intermodalité, assorti des avis des conseils départementaux des départements inclus dans la
 région, des autorités organisatrices de la mobilité ainsi que des observations formulées par les personnes associées à son
-élaboration, est mis à la disposition du public dans les conditions prévues à l'article L. 120-1 du code de l'environnement.
+élaboration, est mis à la disposition du public dans les conditions prévues à l'article L. 120-1 du code de l'environnement. 
 
 Le projet est arrêté par le conseil régional après avis favorable des organes délibérants des autorités organisatrices de la
-mobilité représentant au moins la moitié de la population des ressorts territoriaux de ces dernières dans  la région. 
+mobilité représentant au moins la moitié de la population des ressorts territoriaux de ces dernières dans la région. 
 
 En l'absence de réponse de la collectivité publique dans un délai de trois mois à compter de la transmission du projet de
 schéma, son avis est réputé favorable. 
@@ -26,10 +26,10 @@ Il fait l'objet d'une évaluation tous les cinq ans et il est, si nécessaire, r
 
 	**Modifié par**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 18 (V)
+	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L122-4
+	  - Code de l'urbanisme - art. L143-16 (VD)
 	  - Code de l'environnement - art. L120-1
 	  - Code des transports - art. L1231-10
