--- a/01. PARTIE LEGISLATIVE/Article L1213-3-4 - 31051646.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-4 - 31051646.md
@@ -6,7 +6,7 @@ du chapitre Ier du titre Ier du livre Ier de la présente partie, notamment en v
 transports collectifs, les usages partagés des véhicules terrestres à moteur et les modes de déplacement terrestres non
 motorisés. 
 
-Le plan de mobilité rurale est élaboré à l'initiative d'un établissement public mentionné aux a à c de l'article L. 122-4 du
+Le plan de mobilité rurale est élaboré à l'initiative d'un établissement public mentionné aux a à c de l'article L. 143-16 du
 code de l'urbanisme ou, à défaut, par un pôle d'équilibre territorial et rural. Le plan couvre tout ou partie du territoire
 de l'établissement public qui l'élabore. 
 
@@ -27,11 +27,19 @@ quatrième et cinquième alinéas du présent article, le plan est arrêté par 
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2015-992 du 17 août 2015 - art. 55
+	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
+
+	**Liens**:
+
+	  - TRANSFERE: Ordonnance n°2016-1028 du 27 juillet 2016 - art. 2
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L122-4 (VT)
-	  - Code de l'environnement - art. L120-1 (V)
+	  - Code de l'urbanisme - art. L143-16
+	  - Code de l'environnement - art. L120-1
+
+	**Nouveaux textes**:
+
+	  - Code des transports - art. L1213-3-2 (M)
