--- a/01. PARTIE LEGISLATIVE/Article L1214-10 - 23086140.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-10 - 23086140.md
@@ -1,7 +1,7 @@
 # Article L1214-10
 
 Les prescriptions du plan de déplacements urbains sont compatibles avec les orientations du schéma directeur de la région
-Ile-de-France prévu par l'article L. 141-1 du code de l'urbanisme et avec le plan régional pour la qualité de l'air prévu par
+Ile-de-France prévu par l'article L. 123-1 du code de l'urbanisme et avec le plan régional pour la qualité de l'air prévu par
 l'article L. 222-1 du code de l'environnement. 
 
 Les schémas de cohérence territoriale, les schémas de secteur et les plans locaux d'urbanisme sont compatibles avec le plan
@@ -13,16 +13,15 @@ de-France figurent au dernier alinéa du II du même article 2 de cette loi.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-3 (Ab), alinéa 1, phrases 3 et 4
-	  - Loi n°2010-597 du 3 juin 2010 - art. 2 (VT), alinéa 12, paragraphe II
-
 	**Cite**:
 
-	  - Loi n°2010-597 du 3 juin 2010 - art. 2 (VT)
-	  - Code de l'urbanisme - art. L141-1 (V)
-	  - Code de l'environnement - art. L222-1 (V)
+	  - Loi n°2010-597 du 3 juin 2010 - art. 2
+	  - Code de l'urbanisme - art. L123-1 (VT)
+	  - Code de l'environnement - art. L222-1
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
 
 	**Codifié par**:
 
