--- a/01. PARTIE LEGISLATIVE/Article L1214-27 - 23086037.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-27 - 23086037.md
@@ -4,17 +4,17 @@ Le projet de plan de déplacements urbains est approuvé par décret en Conseil 
 d'Ile-de-France ne sont pas parvenus à un accord sur le projet dans un délai fixé par voie réglementaire à l'issue de
 l'enquête publique ou lorsque sa mise en œuvre serait de nature à compromettre gravement la réalisation ou l'exploitation
 d'une infrastructure de transports d'intérêt national ou la réalisation d'une opération d'intérêt national mentionnée à
-l'article L. 121-2 du code de l'urbanisme.
+l'article L. 102-12 du code de l'urbanisme.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-3 (Ab), alinéa 4, phrase 2
+	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L121-2 (V)
+	  - Code de l'urbanisme - art. L102-12 (VD)
 
 	**Cité par**:
 
