--- a/01. PARTIE LEGISLATIVE/Article L1231-13 - 23085743.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-13 - 23085743.md
@@ -1,18 +1,25 @@
 # Article L1231-13
 
 Il peut comprendre des syndicats mixtes définis à l'article L. 5711-1 ou à l'article L. 5721-2 du code général des
-collectivités territoriales et compétents en matière d'organisation des transports.
+collectivités territoriales et compétents en matière d'organisation des transports. 
+
+Les syndicats mixtes prévus au 2° de l'article L. 143-16 du code de l'urbanisme dont au moins deux des membres sont autorités
+organisatrices, au sens de l'article L. 1231-1, peuvent exercer la compétence prévue aux articles L. 1231-10 et L. 1231-11.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 30-1 (VT), alinéa 4
+	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L5711-1 (V)
-	  - Code général des collectivités territoriales - art. L5721-2 (VT)
+	  - Code général des collectivités territoriales - art. L5711-1
+	  - Code général des collectivités territoriales - art. L5721-2
+	  - Code de l'urbanisme - art. L143-16 (VD)
+	  - Code des transports - art. L1231-1 (V)
+	  - Code des transports - art. L1231-10 (V)
+	  - Code des transports - art. L1231-11 (V)
 
 	**Codifié par**:
 
