--- a/01. PARTIE LEGISLATIVE/Article L1612-1 - 23085209.md
+++ b/01. PARTIE LEGISLATIVE/Article L1612-1 - 23085209.md
@@ -1,17 +1,18 @@
 # Article L1612-1
 
 Un dossier préliminaire est adressé à l'autorité compétente, avant l'engagement des travaux. Il est accompagné d'un rapport
-sur la sécurité établi soit par un expert, soit par un organisme qualifié, agréé qui précise, notamment, les conditions
-d'exploitation au regard des risques naturels ou technologiques susceptibles d'affecter le système.
+sur la sécurité établi, hormis pour le transport ferroviaire et le transport guidé, soit par un expert, soit par un organisme
+qualifié, agréé, qui précise, notamment, les conditions d'exploitation au regard des risques naturels ou technologiques
+susceptibles d'affecter le système.
+
+Pour le transport ferroviaire, le rapport sur la sécurité est établi par un organisme qualifié, accrédité. Pour le transport
+guidé, ce rapport est établi par un organisme qualifié, agréé ou accrédité.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 13-1 (VT), alinéa 1, ecqc le dossier, art 13-2 (VT), alinéa 1, ecqc le dossier
-	  - Code des ports maritimes - art. L155-1 (VT), alinéa 1, ecqc le dossier
-	  - Code de l'aviation civile - art. L211-1 (VT), alinéa 1, ecqc le dossier
-	  - Code du domaine public fluvial et de la navigat... - art. 30 (VT), alinéa 1, ecqc le dossier
+	  - Ordonnance n°2015-1682 du 17 décembre 2015 - art. 8
 
 	**Cité par**:
 
