--- a/01. PARTIE LEGISLATIVE/Article L4111-5 - 23083440.md
+++ b/01. PARTIE LEGISLATIVE/Article L4111-5 - 23083440.md
@@ -1,23 +1,18 @@
 # Article L4111-5
 
 Le registre d'immatriculation est public. Toute personne peut en obtenir des extraits, le cas échéant certifiés conformes,
-selon les modalités prévues à l'article 4 de la loi n° 78-753 du 17 juillet 1978 portant diverses mesures d'amélioration des
-relations entre l'administration et le public et diverses dispositions d'ordre administratif, social et fiscal.
+selon les modalités prévues à l'article L. 311-9 du code des relations entre le public et l'administration.
 
 **Liens relatifs à cet article**
 
-	**Cite**:
+	**Modifié par**:
 
-	  - Loi n°78-753 du 17 juillet 1978 - art. 4
-
-	**Anciens textes**:
-
-	  - Code du domaine public fluvial et de la navigat... - art. 82 (Ab)
+	  - ORDONNANCE n°2015-1341 du 23 octobre 2015 - art. 3 (V)
 
 	**Cité par**:
 
 	  - Code des transports - art. R4121-4 (V)
 
-	**Codifié par**:
+	**Cite**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des relations entre le public et l'adminis... - art. L311-9 (V)
