--- a/01. PARTIE LEGISLATIVE/Article L5114-4 - 23081845.md
+++ b/01. PARTIE LEGISLATIVE/Article L5114-4 - 23081845.md
@@ -1,24 +1,19 @@
 # Article L5114-4
 
-Le fichier d'inscription est public. Toute personne peut en obtenir des extraits selon les modalités prévues à l'article 4 de
-la loi n° 78-753 du 17 juillet 1978 portant diverses mesures d'amélioration des relations entre l'administration et le public
-et diverses dispositions d'ordre administratif, social et fiscal.
+Le fichier d'inscription est public. Toute personne peut en obtenir des extraits selon les modalités prévues à l'article L.
+311-9 du code des relations entre le public et l'administration.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Décret n°67-967 du 27 octobre 1967 - art. 95 (Ab)
-
-	**Cite**:
-
-	  - Loi n°78-753 du 17 juillet 1978 - art. 4
+	  - ORDONNANCE n°2015-1341 du 23 octobre 2015 - art. 3 (V)
 
 	**Cité par**:
 
 	  - Code des transports - art. L5544-59 (V)
 	  - Code général des impôts, annexe 2, CGIAN2. - art. 171 AH (P)
 
-	**Codifié par**:
+	**Cite**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des relations entre le public et l'adminis... - art. L311-9 (V)
