--- a/01. PARTIE LEGISLATIVE/Article L6222-3 - 23078284.md
+++ b/01. PARTIE LEGISLATIVE/Article L6222-3 - 23078284.md
@@ -1,19 +1,14 @@
 # Article L6222-3
 
-Les dispositions du titre Ier de la loi n° 78-753 du 17 juillet 1978 portant diverses mesures d'amélioration des relations
-entre l'administration et le public et diverses dispositions d'ordre administratif, social et fiscal ne s'appliquent ni aux
-documents recueillis pour l'établissement du rapport d'enquête de sécurité, ni aux comptes rendus d'accidents ou d'incidents
-d'aviation civile, ni aux documents s'y rapportant.
+Les dispositions du livre III du code des relations entre le public et l'administration ne s'appliquent ni aux documents
+recueillis pour l'établissement du rapport d'enquête de sécurité, ni aux comptes rendus d'accidents ou d'incidents d'aviation
+civile, ni aux documents s'y rapportant.
 
 **Liens relatifs à cet article**
 
-	**Cite**:
-
-	  - Loi n°78-753 du 17 juillet 1978
-
 	**Modifié par**:
 
-	  - Ordonnance n°2012-872 du 12 juillet 2012 - art. 2
+	  - ORDONNANCE n°2015-1341 du 23 octobre 2015 - art. 3 (V)
 
 	**Cité par**:
 
@@ -21,6 +16,6 @@ d'aviation civile, ni aux documents s'y rapportant.
 	  - Code des transports - art. L6222-5 (Ab)
 	  - Code des transports - art. L6223-1 (V)
 
-	**Codifié par**:
+	**Cite**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des relations entre le public et l'adminis... - art. L300-1 (V)
