--- a/02. PARTIE REGLEMENTAIRE/Article R1422-10 - 28996771.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-10 - 28996771.md
@@ -7,18 +7,14 @@ de transporteurs publics de marchandises ou de voyageurs par route, ou de loueur
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 9 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1452-1 (V)
+	  - Code des transports - art. R1452-1
