--- a/02. PARTIE REGLEMENTAIRE/Article R1422-14 - 28996779.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-14 - 28996779.md
@@ -3,23 +3,17 @@
 Les modalités d'exercice des activités à titre salarié sont les suivantes :
 
 1° Soit pendant deux années consécutives, lorsque l'intéressé prouve qu'il a reçu, pour cette activité, une formation
-préalable d'au moins trois ans sanctionnée par un certificat reconnu par l'Etat membre ou partie ou jugée pleinement valable
-par un organisme professionnel compétent ;
+préalable d'au moins trois ans  ;
 
 2° Soit pendant trois années consécutives, lorsque l'intéressé prouve qu'il a reçu, pour cette activité, une formation
-préalable d'au moins deux ans sanctionnée par un certificat reconnu par l'Etat membre ou partie ou jugée pleinement valable
-par un organisme professionnel compétent.
+préalable d'au moins deux ans.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéas 6 et 7, paragraphe I (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
