--- a/02. PARTIE REGLEMENTAIRE/Article R1422-16 - 28996783.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-16 - 28996783.md
@@ -6,37 +6,32 @@ Sous réserve des dispositions de l'article R. 1422-18, l'intéressé doit selon
 transport dans l'Etat dans lequel ont été acquises les qualifications lorsque celui-ci réglemente l'accès à la profession,
 son exercice ou la formation y conduisant ; 
 
-2° Avoir exercé pendant deux années à temps plein au cours des dix années précédentes la profession de commissionnaire de
-transport dans un Etat qui ne réglemente pas cette profession et posséder au moins une attestation de compétence ou un titre
-de formation attestant qu'il a été préparé à l'exercice de cette profession. Les deux ans d'expérience professionnelle ne
-sont toutefois pas exigibles lorsque le ou les titres de formation détenus sanctionnent une formation réglementée. 
+2° Avoir exercé à temps plein pendant une année, ou pendant une durée équivalente à temps partiel, au cours des dix années
+précédentes dans un autre Etat membre de l'Union européenne ou dans un Etat partie à l'accord sur l'Espace économique
+européen qui ne réglemente pas cette profession et posséder une ou plusieurs attestations de compétences ou preuves de titres
+de formation délivrées par un de ces Etats qui ne réglemente pas cette profession. L'année d'expérience professionnelle n'est
+toutefois pas exigible lorsque le ou les titres de formation détenus sanctionnent une formation réglementée. 
 
 Est également assimilée et reconnue comme titre de formation toute qualification professionnelle conférant des droits acquis
 à son titulaire en vertu de dispositions législatives, réglementaires ou administratives de l'Etat d'origine qui ont été
 modifiées ultérieurement par cet Etat pour, en particulier, relever le niveau de formation requis pour l'accès à la
 profession de commissionnaire de transport. De même, est reconnu tout titre de formation ou certificat permettant l'exercice
 de cette profession acquis dans un pays tiers et admis en équivalence par un Etat, membre ou partie, dès lors que l'intéressé
-a, en outre, effectivement exercé pendant trois années l'activité considérée dans l'Etat qui a admis l'équivalence.
+a, en outre, effectivement exercé pendant trois années, ou pendant une durée équivalente à temps partiel,  l'activité
+considérée dans l'Etat qui a admis l'équivalence.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéas 10 à 14, paragraphe II (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
 	  - Code des transports - art. R1422-15 (VD)
 	  - Code des transports - art. R1422-17 (VD)
-
-	**Cite**:
-
-	  - Code des transports - art. R1422-18 (V)
+	  - Code des transports - art. R1422-18 (VD)
