--- a/02. PARTIE REGLEMENTAIRE/Article R1422-18 - 28996787.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-18 - 28996787.md
@@ -1,40 +1,40 @@
 # Article R1422-18
 
-Outre les conditions fixées à l'article R. 1422-16, le préfet de région peut décider de faire accomplir à l'intéressé un
-stage d'adaptation ou de le soumettre à une épreuve d'aptitude avant qu'il soit statué sur la reconnaissance de sa
-qualification, dans l'un des cas suivants : 
+Outre les conditions fixées à l'article R. 1422-16, le préfet de région peut décider, sur le fondement des programmes des
+formations ou du contenu de l'expérience acquise, communiqués par l'intéressé, qui ont donné lieu à la délivrance du titre de
+formation ou de l'attestation de compétences mentionnés à l'article R. 1422-16, et, selon le choix de l'intéressé, de lui
+faire accomplir un stage d'adaptation ou de le soumettre à une épreuve d'aptitude avant qu'il soit statué sur la
+reconnaissance de sa qualification, dans l'un des cas suivants : 
 
-1° La durée de la formation attestée est inférieure d'au moins un an à celle requise pour obtenir l'un des diplômes ou titres
-mentionnés à l'article R. 1422-4 ; 
+1° La formation reçue porte, par son contenu, sur des matières substantiellement différentes de celles couvertes par l'un des
+diplômes ou titres mentionnés à l'article R. 1422-4 et dont la connaissance est essentielle à l'exercice de la profession ; 
 
-2° La formation reçue porte, par sa durée ou son contenu, sur des matières substantiellement différentes de celles couvertes
-par l'un des diplômes ou titres mentionnés à l'article R. 1422-4 et dont la connaissance est essentielle à l'exercice de la
-profession ; 
-
-3° Une ou plusieurs des activités réglementées constitutives de la formation de commissionnaire de transport en France
+2° Une ou plusieurs des activités réglementées constitutives de la formation de commissionnaire de transport en France
 n'existent pas dans la profession correspondante dans l'Etat ayant délivré l'attestation de compétences ou le titre de
-formation dont l'intéressé se prévaut, et cette différence est caractérisée par une formation spécifique requise en France et
-qui porte sur des matières substantiellement différentes de celles couvertes par cette attestation ou ce titre. 
+formation dont l'intéressé se prévaut, et la formation requise en France porte sur des matières substantiellement différentes
+de celles couvertes par cette attestation ou ce titre. 
 
 L'intéressé a le choix entre le stage d'adaptation et l'épreuve d'aptitude. 
 
 Avant de demander une telle mesure, le préfet de région vérifie si les connaissances acquises par l'intéressé au cours de son
 expérience professionnelle dans un Etat, membre ou partie, ou dans un Etat tiers sont de nature à couvrir, totalement ou
-partiellement, la différence substantielle en termes de durée ou de contenu mentionnée aux 1°, 2° ou 3°.
+partiellement, la différence substantielle en termes de durée ou de contenu mentionnée aux 1° ou 2°. Pour la validation des
+aptitudes et compétences, l'apprentissage tout au long de la vie et ayant fait l'objet, à cette fin, d'une validation par un
+organisme compétent, dans tout Etat membre de l'Union européenne ou dans un Etat partie à l'accord sur l'Espace économique
+européen ou dans un Etat tiers à l'Union européenne, est pris en compte dans la mesure où il est de nature à couvrir, en tout
+ou en partie, les matières substantiellement différentes mentionnées aux 1° et 2°. 
+
+L'épreuve d'aptitude doit pouvoir être réalisée dans les six mois suivant la décision du préfet de région qui la prescrit.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéas 19 à 25, paragraphe II (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
@@ -44,4 +44,4 @@ partiellement, la différence substantielle en termes de durée ou de contenu me
 
 	**Cite**:
 
-	  - Code des transports - art. R1422-4 (V)
+	  - Code des transports - art. R1422-4 (VD)
