--- a/02. PARTIE REGLEMENTAIRE/Article R1422-19 - 28996789.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-19 - 28996789.md
@@ -5,17 +5,13 @@ français nécessaires à l'exercice de l'activité de commissionnaire en France
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéa 26, paragraphe III (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
