--- a/02. PARTIE REGLEMENTAIRE/Article R1422-20 - 28996791.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-20 - 28996791.md
@@ -1,21 +1,19 @@
 # Article R1422-20
 
-Un arrêté du ministre chargé des transports fixe les modalités d'application des articles R. 1422-12 à R. 1422-19.
+Un arrêté du ministre chargé des transports fixe les modalités d'application de l'article R. 1422-4 et des articles R.
+1422-12 à R. 1422-19.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 11, alinéa 27, paragraphe IV (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1422-12 (V)
+	  - Code des transports - art. R1422-12 (VD)
+	  - Code des transports - art. R1422-4
