--- a/02. PARTIE REGLEMENTAIRE/Article R1422-21 - 28996793.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-21 - 28996793.md
@@ -9,20 +9,16 @@ prouvée par une attestation de l'autorité ou de l'organisme compétent de l'Et
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 12 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1422-12 (V)
-	  - Code des transports - art. R1422-13 (V)
-	  - Code des transports - art. R1422-4 (V)
+	  - Code des transports - art. R1422-12
+	  - Code des transports - art. R1422-13
+	  - Code des transports - art. R1422-4
