--- a/02. PARTIE REGLEMENTAIRE/Article R1422-22 - 28996795.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-22 - 28996795.md
@@ -7,22 +7,18 @@ commissionnaire de transport, de transporteur public routier de marchandises ou 
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 15 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Liens**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - DEPLACE: Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1422-11 (V)
+	  - Code des transports - art. R1422-11
 
 	**Cité par**:
 
-	  - Code des transports - art. R1422-23 (V)
+	  - Code des transports - art. R1422-23 (VD)
