--- a/02. PARTIE REGLEMENTAIRE/Article R1422-3 - 28996757.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-3 - 28996757.md
@@ -8,21 +8,17 @@ Le nom et les fonctions de cette personne sont mentionnés au registre.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 3 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1411-1 (V)
+	  - Code des transports - art. R1411-1
 
 	**Cité par**:
 
