--- a/02. PARTIE REGLEMENTAIRE/Article R1422-4 - 28996759.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-4 - 28996759.md
@@ -9,27 +9,13 @@ d'enseignement technique sanctionnant une formation aux activités du transport 
 
 2° La réussite aux épreuves d'un examen écrit ; 
 
-3° L'exercice pendant au moins cinq années consécutives de fonctions de direction ou d'encadrement ou à titre indépendant, ou
-l'exercice de l'activité pendant trois années consécutives à titre indépendant ou en qualité de dirigeant d'entreprise,
-lorsque le bénéficiaire prouve qu'il a exercé l'activité en question à titre salarié pendant deux ans au moins, à condition
-que ces fonctions n'aient pas pris fin depuis plus de dix ans à la date de la demande d'attestation de capacité, soit dans
-une entreprise exerçant les activités mentionnées à l'article R. 1411-1, soit dans une entreprise inscrite au registre des
-transporteurs ou des loueurs, soit dans une autre entreprise à condition que ces fonctions relèvent de la commission de
-transport et que soient justifiées les connaissances et les compétences requises pour les exercer. 
-
-Les modalités d'application du présent article sont précisées par arrêté du ministre chargé des transports.
+3° La reconnaissance des qualifications professionnelles acquises dans un Etat membre de l'Union européenne ou dans un Etat
+partie à l'accord sur l'Espace économique européen et relatives aux activités mentionnées à l'article R. 1411-1, selon les
+modalités définies soit par les articles R. 1422-11 à R. 1422-14-1, soit par les articles R. 1422-15 à R. 1422-18.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 4 (Ab)
-
 	**Codifié par**:
-
-	  - Décret n°2014-530 du 22 mai 2014 - art.
-
-	**Créé par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
@@ -40,10 +26,15 @@ Les modalités d'application du présent article sont précisées par arrêté d
 	  - Arrêté du 21 décembre 2015 - art. 5 (V)
 	  - Code des transports - art. R1422-11 (VD)
 	  - Code des transports - art. R1422-17 (VD)
-	  - Code des transports - art. R1422-18 (V)
+	  - Code des transports - art. R1422-18 (VD)
 	  - Code des transports - art. R1422-20 (VD)
 	  - Code des transports - art. R1422-21 (VD)
 
+	**Modifié par**:
+
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
+
 	**Cite**:
 
-	  - Code des transports - art. R1411-1 (V)
+	  - Code des transports - art. R1411-1
+	  - Code des transports - art. R1422-15
