--- a/02. PARTIE REGLEMENTAIRE/Article R1422-6 - 28996763.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-6 - 28996763.md
@@ -28,22 +28,18 @@ transport.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 6, alinéas 1 à 10 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. R1411-1 (V)
+	  - Code des transports - art. R1411-1
 
 	**Cité par**:
 
-	  - Code des transports - art. R1422-7 (V)
+	  - Code des transports - art. R1422-7 (VD)
