--- a/02. PARTIE REGLEMENTAIRE/Article R1422-8 - 28996767.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-8 - 28996767.md
@@ -13,4 +13,4 @@ profession de transporteur de marchandises et de transporteur de voyageurs par r
 
 	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art. 7 (V)
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
