--- a/02. PARTIE REGLEMENTAIRE/Article R1422-9 - 28996769.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1422-9 - 28996769.md
@@ -6,17 +6,13 @@ demandée.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°90-200 du 5 mars 1990 - art. 8 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1693 du 17 décembre 2015 - art. 1
 
 	**Cité par**:
 
