--- a/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-33  - 27908327.md
+++ b/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-33  - 27908327.md
@@ -1,11 +1,12 @@
 # Article A4241-33 
 
-Documents de bord 
+Documents de bord. 
 
-Outre le certificat d'immatriculation exigé à l'article L. 4111-6, le certificat de jaugeage exigé à l'article L. 4112-3, le
-titre de navigation exigé à l'article L. 4221-1, les exemplaires du règlement général de police et des règlements
-particuliers de police exigés aux articles R. 4241-31 et R. 4241-32, le carnet des huiles usées exigé à l'article R. 4241-65,
-doivent se trouver à bord des bateaux les documents ci-après : 
+Outre le certificat d'immatriculation exigé à l'article L. 4111-6, le certificat de jaugeage exigé à l'article L. 4112-3,
+l'extrait des inscriptions des droits réels existants sur le bateau ou le certificat exigé à l'article L. 4121-3, le titre de
+navigation exigé à l'article L. 4221-1, les exemplaires du règlement général de police et des règlements particuliers de
+police exigés aux articles R. 4241-31 et R. 4241-32, le carnet de contrôle des huiles usées exigé à l'article R. 4241-65,
+doivent se trouver à bord des bateaux, les documents ci-après : 
 
 1° Le certificat de capacité du conducteur pour la conduite des bateaux de commerce prévu à l'article R. 4231-1 le document
 en tenant lieu ; 
@@ -45,7 +46,10 @@ s'il y a lieu ;
 9° A bord de tout bateau visé aux 1°, 2°, 3° et 4° de l'article D. 4221-1, les attestations de contrôle des grues, s'il y a
 lieu ; 
 
-10° A bord de tout bateau transportant des conteneurs, les documents relatifs à la stabilité du bateau ; 
+10° A bord de tout bateau transportant des conteneurs, les documents relatifs à la stabilité du bateau au sens des
+dispositions de l'article 22.01 de l'annexe 1 de l'arrêté du 30 décembre 2008 relatif aux prescriptions techniques de
+sécurité applicables aux bateaux de marchandises, aux bateaux à passagers et aux engins flottants naviguant ou stationnant
+sur les eaux intérieures ; 
 
 11° A bord de tout bateau de marchandises, la déclaration de chargement prévue à l'article R. 4461-1, s'il y a lieu, ainsi
 que la lettre de voiture ou le connaissement prévus à l'article R. 4461-2, s'il y a lieu ; 
@@ -58,23 +62,25 @@ signée à Strasbourg le 9 septembre 1996, l'attestation de déchargement mentio
 
 	**Cite**:
 
-	  - Arrêté du 2 juillet 2008 (V)
+	  - Arrêté du 2 juillet 2008
 	  - Arrêté du 29 mai 2009 - art. 18
-	  - Décret n°2010-197 du 23 février 2010, v. init.
-	  - Code des transports - art. D4221-1 (V)
-	  - Code des transports - art. L4111-6 (V)
-	  - Code des transports - art. L4112-3 (V)
-	  - Code des transports - art. L4221-1 (V)
-	  - Code des transports - art. R4231-1 (V)
-	  - Code des transports - art. R4231-15 (V)
-	  - Code des transports - art. R4231-5 (V)
-	  - Code des transports - art. R4241-31 (VD)
-	  - Code des transports - art. R4461-2 (V)
+	  - Décret n°2010-197 du 23 février 2010
+	  - Code des transports - art. D4221-1
+	  - Code des transports - art. L4111-6
+	  - Code des transports - art. L4112-3
+	  - Code des transports - art. L4121-3
+	  - Code des transports - art. L4221-1
+	  - Code des transports - art. R4231-1
+	  - Code des transports - art. R4231-15
+	  - Code des transports - art. R4231-5
+	  - Code des transports - art. R4241-31
+	  - Code des transports - art. R4241-65
+	  - Code des transports - art. R4461-2
 
 	**Codifié par**:
 
 	  - Arrêté du 28 juin 2013 -  Annexe (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Arrêté du 28 juin 2013 - art.
+	  - Arrêté du 31 décembre 2015 - art. 4
