--- a/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-1 - 27908295.md
+++ b/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-1 - 27908295.md
@@ -48,7 +48,22 @@ temps ses propres moyens mécaniques doit être considéré comme un bateau moto
 15° " Bateau de plaisance mû exclusivement par la force humaine " : bateau de plaisance, défini à l'article R. 4000-1, qui
 n'utilise pour son déplacement ni moteur ni voile ; 
 
-16° " Arrêt " : situation d'un bateau, dont la vitesse par rapport au fond est nulle, sans être ancré, amarré ou échoué.
+16° " Arrêt " : situation d'un bateau, dont la vitesse par rapport au fond est nulle, sans être ancré, amarré ou échoué ; 
+
+17° Pratique organisée de sports nautiques non motorisés : pratique des sports nautiques non motorisés exercée sous la
+responsabilité, soit : 
+
+a) D'un club ou d'une structure affiliée à une fédération faisant l'objet d'une délégation ou d'un agrément conformément aux
+articles L. 131-8 et L. 131-14 du code du sport ; 
+
+b) D'une personne titulaire d'un diplôme visé aux articles R. 212-1 et R. 212-2 du code du sport ; 
+
+c) D'un établissement visé aux articles L. 322-1 et suivants du code du sport ou de l'article R. 227-1 du code de l'action
+sociale et des familles ; 
+
+d) D'un établissement scolaire tel que défini par le code de l'éducation ; 
+
+e) D'un établissement public de formation visé à l'article D. 112-3 du code du sport.
 
 **Liens relatifs à cet article**
 
@@ -56,14 +71,20 @@ n'utilise pour son déplacement ni moteur ni voile ;
 
 	  - Arrêté du 28 juin 2013 -  Annexe (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Arrêté du 28 juin 2013 - art.
+	  - Arrêté du 31 décembre 2015 - art. 2
 
 	**Cite**:
 
+	  - Code du sport. - art. D112-3
+	  - Code du sport. - art. L131-14
+	  - Code du sport. - art. L131-8
+	  - Code du sport. - art. L322-1
+	  - Code du sport. - art. R212-1
+	  - Code de l'action sociale et des familles - art. R227-1
 	  - Code des transports - art. A4241-48-2
-	  - Code des transports - art. R4000-1 (V)
+	  - Code des transports - art. R4000-1
 
 	**Cité par**:
 
