--- a/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-28 - 27908323.md
+++ b/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-28 - 27908323.md
@@ -1,24 +1,34 @@
 # Article A4241-28
 
-Règles relatives à la stabilité du bateau et à la résistance de la coque 
+Règles relatives à la stabilité du bateau et à la résistance de la coque.
 
-La stabilité des bateaux transportant des conteneurs est vérifiée par le responsable du transport avant le départ sauf dans
-les cas de chargement non critiques. Les résultats de la vérification sont conservés à bord pendant la durée du transport.
-Sont réputés non critiques les cas suivants : 
+La stabilité des bateaux transportant des conteneurs doit être assurée à tout moment.
 
-― bateaux chargés uniquement de conteneurs en cale, sur une seule couche centrée sur l'axe du bateau ; 
+Le conducteur doit prouver qu'un contrôle de la stabilité, au sens des dispositions des articles 22.01 et suivants de
+l'annexe 1 de l'arrêté du 30 décembre 2008 susvisé, a été effectué avant le début du chargement et du déchargement ainsi
+qu'avant le début du voyage.
 
-― bateaux d'une largeur égale ou supérieure à 9,5 m, chargés uniquement de conteneurs, sur deux couches au maximum, centrées
-sur l'axe du bateau, en partant du fond de la cale, et non ballastables. 
+Le contrôle de la stabilité peut être effectué manuellement ou au moyen d'un instrument de chargement.
 
-D'autres cas peuvent être considérés comme non critiques après une étude de stabilité spécifique au bateau.
+Un contrôle de la stabilité n'est pas nécessaire pour les bateaux transportant des conteneurs, si le bateau peut être chargé
+dans sa largeur :
+
+a) De trois rangées de conteneurs au maximum et s'il n'est chargé que d'une couche de conteneurs à partir du plancher de la
+cale ; ou
+
+b) De quatre rangées de conteneurs ou plus et s'il est chargé exclusivement de conteneurs en deux couches au maximum à partir
+du plancher de la cale.
 
 **Liens relatifs à cet article**
+
+	**Cite**:
+
+	  - Arrêté du 30 décembre 2008
 
 	**Codifié par**:
 
 	  - Arrêté du 28 juin 2013 -  Annexe (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Arrêté du 28 juin 2013 - art.
+	  - Arrêté du 31 décembre 2015 - art. 3
