--- a/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-60 - 27909538.md
+++ b/03. PARTIE REGLEMENTAIRE - Arrêtés /Article A4241-60 - 27909538.md
@@ -1,15 +1,28 @@
 # Article A4241-60
 
-Bateaux de plaisance mus exclusivement par la force humaine 
+Bateaux de plaisance mus exclusivement par la force humaine et bateaux à voile. 
 
-Les prescriptions relatives aux bateaux de plaisance mus exclusivement par la force humaine, doivent être adaptées : 
+Les prescriptions prévues dans les règlements particuliers de police relatives à la navigation des bateaux de plaisance mus
+exclusivement par la force humaine et à voile doivent être adaptées : 
 
-― aux caractéristiques techniques de ces bateaux ; 
+a) Aux caractéristiques techniques de ces bateaux ; 
 
-― au classement technique des eaux intérieures prévu par l'article L. 311-2 du code des sports ; 
+b) Au classement technique des eaux intérieures prévu par l'article L. 311-2 du code du sport ; 
 
-― aux règles définies par les articles A. 322-42 à A. 322-63 du code des sports, relatives à la pratique du canoë, du kayak,
-du raft, de la nage en eau vive ainsi que la navigation à l'aide de toute autre embarcation propulsée à la pagaie.
+En outre, pour la pratique organisée de sports nautiques non motorisés définie à l'alinéa 17 de l'article A. 4241-1, les
+prescriptions doivent prendre en compte : 
+
+a) Les règles définies par les articles A. 322-42 à A. 322-57 du code du sport relatifs aux établissements qui organisent la
+pratique du canoë, du kayak, du raft, de la nage en eau vive ainsi que la navigation à l'aide de toute autre embarcation
+propulsée à la pagaie ; 
+
+b) Les règles définies par les articles A. 322-64 à A. 322-70 du code du sport relatifs aux établissements qui dispensent un
+enseignement de la voile ; 
+
+c) Les règles édictées par les fédérations délégataires conformément à l'article L. 131-16 du code du sport. 
+
+Les prescriptions peuvent être différenciées selon que la pratique encadrée s'exerce en groupe ou individuellement ou encore
+selon le sport nautique considéré.
 
 **Liens relatifs à cet article**
 
@@ -17,11 +30,14 @@ du raft, de la nage en eau vive ainsi que la navigation à l'aide de toute autre
 
 	  - Arrêté du 28 juin 2013 -  Annexe (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Arrêté du 28 juin 2013 - art.
+	  - Arrêté du 31 décembre 2015 - art. 6
 
 	**Cite**:
 
-	  - Code du sport. - art. A322-42 (V)
-	  - Code du sport. - art. L311-2 (V)
+	  - Code du sport. - art. A322-42
+	  - Code du sport. - art. A322-64
+	  - Code du sport. - art. L131-16
+	  - Code du sport. - art. L311-2
+	  - Code des transports - art. A4241-1
