--- a/01. PARTIE LEGISLATIVE/Article L1252-2 - 23085650.md
+++ b/01. PARTIE LEGISLATIVE/Article L1252-2 - 23085650.md
@@ -16,7 +16,8 @@ la législation sociale dans les établissements soumis au contrôle technique d
 5° Les fonctionnaires et agents des services déconcentrés relevant des ministres chargés des transports et de l'environnement
 assermentés et commissionnés à cet effet ; 
 
-6° Les inspecteurs de la sûreté nucléaire remplissant les conditions prévues par l'article L596-2 du code de l'environnement.
+6° Les inspecteurs de la sûreté nucléaire, dans les conditions prévues au chapitre VI du titre IX du livre V du code de
+l'environnement.
 
 **Liens relatifs à cet article**
 
@@ -28,14 +29,14 @@ assermentés et commissionnés à cet effet ;
 	  - Code des transports - art. L1252-3 (VD)
 	  - Code des transports - art. L1252-4 (VD)
 
-	**Modifié par**:
-
-	  - Ordonnance n°2012-6 du 5 janvier 2012 - art. 5, v. init.
-
-	**Cite**:
-
-	  - Code de l'environnement - art. L596-2 (V)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2016-128 du 10 février 2016 - art. 35
+
+	**Cite**:
+
+	  - Code de l'environnement - art. L596-2
