--- a/01. PARTIE LEGISLATIVE/Article L5336-3 - 23080505.md
+++ b/01. PARTIE LEGISLATIVE/Article L5336-3 - 23080505.md
@@ -7,13 +7,16 @@ par les dispositions réglementaires prises en application du présent titre :
 
 2° Les surveillants de port agréés en application de l'article L. 5331-15 qui ont la qualité de fonctionnaire ; 
 
-3° Les auxiliaires de surveillance agréés en application de l'article L. 5331-15 qui ont la qualité de fonctionnaire.
+3° Les auxiliaires de surveillance agréés en application de l'article L. 5331-15 qui ont la qualité de fonctionnaire ;
+
+4° Les inspecteurs de la sûreté nucléaire, dans les conditions prévues au chapitre VI du titre IX du livre V du code de
+l'environnement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L345-1 (Ab)
+	  - Ordonnance n°2016-128 du 10 février 2016 - art. 35
 
 	**Cité par**:
 
@@ -25,7 +28,7 @@ par les dispositions réglementaires prises en application du présent titre :
 
 	**Cite**:
 
-	  - Code des transports - art. L5331-15 (V)
+	  - Code des transports - art. L5331-15
 
 	**Codifié par**:
 
