--- a/01. PARTIE LEGISLATIVE/Article L5243-1 - 23080918.md
+++ b/01. PARTIE LEGISLATIVE/Article L5243-1 - 23080918.md
@@ -10,7 +10,8 @@ les dispositions du présent titre ou les dispositions réglementaires prises po
 3° Les fonctionnaires de catégorie A affectés dans les services exerçant des missions de contrôle dans le domaine des
 affaires maritimes sous l'autorité ou à la disposition du ministre chargé de la mer ; 
 
-4° (Abrogé). 
+4° Les inspecteurs de la sûreté nucléaire, dans les conditions prévues au chapitre VI du titre IX du livre V du code de
+l'environnement.
 
 Les infractions réprimées par les articles L. 5242-1 à L. 5242-8 ou par les dispositions réglementaires prises pour leur
 application peuvent en outre être recherchées et constatées par les agents mentionnés à l'article L. 5222-1.
@@ -26,7 +27,7 @@ application peuvent en outre être recherchées et constatées par les agents me
 
 	**Modifié par**:
 
-	  - Loi n°2013-431 du 28 mai 2013 - art. 31
+	  - Ordonnance n°2016-128 du 10 février 2016 - art. 35
 
 	**Cite**:
 
